--- a/blue_green_application/pubspec.yaml
+++ b/blue_green_application/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=3.1.0 <4.0.0'
 
 dependencies:
+  path: ^1.7.0
   flutter:
     sdk: flutter
   http: ^1.1.0
@@ -15,6 +16,7 @@ dependencies:
   riverpod:
 
 dev_dependencies:
+  json_serializable: ^6.0.0
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
