almost done:) - fix .g, service routing with .g and sorting example with few seconds added delay

--- a/annotations/pubspec.yaml
+++ b/annotations/pubspec.yaml
@@ -1,12 +1,11 @@
 name: annotations
 description: A starting point for Dart libraries or applications.
 version: 1.0.0
-# repository: https://github.com/my_org/my_repo
+repository: https://github.com/manasa0608/blue_green
 
 environment:
   sdk: ^3.0.3
 
-# Add regular dependencies here.
 dependencies:
 # path: ^1.8.0
 
