--- a/blue_green_application/pubspec.yaml
+++ b/blue_green_application/pubspec.yaml
@@ -1,4 +1,4 @@
-name: example
+name: blue_green_application
 description: A new Flutter project.
 publish_to: 'none'
 version: 0.1.0
@@ -14,6 +14,7 @@ dependencies:
   postgres: ^3.0.5
   shelf_router:
   riverpod:
+  memory_cache: ^1.2.0
 
 dev_dependencies:
   json_serializable: ^6.0.0
